--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Animasi Tata Surya</title>
+    <title>ETS Grafkom - Animasi Tata Surya</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gl-matrix/2.8.1/gl-matrix-min.js"
         defer></script>
     <script src="./script.js" defer></script>
